# newsradar

./: .gitignore  README.md  docker-compose.yml
api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
api/app/: main.py
api/app/api/: dashboard.py  data_sources.py  discovery.py  kol.py  outlines.py  workbench.py
api/app/core/: config.py  security.py
api/app/models/: base.py  clue.py  kol.py  org_config.py  outline.py  user.py
api/app/repositories/: __init__.py  article_repo.py  base.py  clue_repo.py  data_source_repo.py  kol_repo.py  org_config_repo.py  user_repo.py
api/app/schemas/: auth.py  common.py  dashboard.py  data_source.py  discovery.py  kol.py  outlines.py  workbench.py
api/app/services/: __init__.py  ai_service.py  auth_service.py  dashboard_service.py  data_source_service.py  discovery_service.py  (+3 more)
api/migrations/: env.py
api/scripts/: init_db.py
api/tests/: conftest.py  test_integration.py
clue-collector/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
clue-collector/app/: __init__.py  api_server.py  config.py  main.py
clue-collector/config/: data_sources.example.yaml  proxy_providers.yaml  settings.yaml
clue-collector/docs/: 数据源配置指南.md
clue-collector/migrations/: env.py  script.py.mako
clue-collector/scripts/: add_sources.py  analyze_tophub.py  diagnose_collection.py  force_collect.py  manage_cookies.py  manage_sources.py  seed_data_sources.py  test_collection.py  test_zhihu_playwright.py  update_sources.py
clue-collector/tests/: conftest.py
(+178 files in other folders)
