[project]
name = "newsradar-collector"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scrapling>=0.1.0",
    "playwright>=1.40.0",
    "curl-cffi>=0.5.0",
    "browserforge>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "uvicorn>=0.25.0",
    "fastapi>=0.109.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.2.0",
    "apscheduler>=3.10.0",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
]